SAR Blai Sandbox/src/objects/Servicio__c.object
<CustomObject>
    <fields>
        <fullName>Activo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Componente_tarifa__c</fullName>
        <label>Componente tarifa</label>
        <picklist>
            <picklistValues>
                <fullName>Tarifa base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suplemento Grado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suplemento Habitación</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cuota_inicial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cuota inicial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripción</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grado_Dependencia__c</fullName>
        <label>Grado Dependencia</label>
        <picklist>
            <picklistValues>
                <fullName>Grado 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grado 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grado 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Servicio__c</fullName>
        <label>Servicio</label>
        <picklist>
            <picklistValues>
                <fullName>TAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_Estancia__c</fullName>
        <label>Tipo Estancia</label>
        <picklist>
            <picklistValues>
                <fullName>Permanente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_Ocupacion__c</fullName>
        <label>Tipo Ocupación</label>
        <picklist>
            <picklistValues>
                <fullName>HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI Baño Compartido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD Uso Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jornada Completa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Jornada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 hora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psicología</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terapia Ocupacional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animación Sociocultural</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_Servicio__c</fullName>
        <label>Tipo Servicio</label>
        <picklist>
            <picklistValues>
                <fullName>Centro de Día</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centro de Noche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convalecencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fijo Discontinuo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital de Día</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paliativo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residencial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respiro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartamento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sociosanitario Privado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrend viv y servicio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartamento social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehabilitación psicosocial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicios Externos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_de_dispositivos__c</fullName>
        <label>Tipo de dispositivos</label>
        <picklist>
            <picklistValues>
                <fullName>MIMOV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GT300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_de_periferico__c</fullName>
        <label>Tipo de periférico</label>
        <picklist>
            <picklistValues>
                <fullName>1 periférico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 periféricos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 periféricos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>...</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tipo_de_servicio_TA__c</fullName>
        <label>Tipo de servicio TA</label>
        <picklist>
            <picklistValues>
                <fullName>Agenda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atención de alarmas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento Especial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento Estándar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unidad móvil</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Transporte__c</fullName>
        <label>Transporte</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Servicio</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tipo_Servicio__c</columns>
        <columns>Tipo_Estancia__c</columns>
        <columns>Grado_Dependencia__c</columns>
        <columns>Tipo_Ocupacion__c</columns>
        <columns>Transporte__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>Servicios_TA</fullName>
        <columns>NAME</columns>
        <columns>Tipo_de_servicio_TA__c</columns>
        <columns>Tipo_de_periferico__c</columns>
        <columns>Tipo_de_dispositivos__c</columns>
        <columns>Cuota_inicial__c</columns>
        <columns>Activo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Servicio__c.Servicios_TA</value>
        </filters>
        <label>Servicios TA</label>
    </listViews>
    <nameField>
        <label>Nombre de Servicio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servicios</pluralLabel>
    <recordTypes>
        <fullName>Servicios_Residenciales</fullName>
        <active>true</active>
        <label>Servicios Residenciales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Servicios_TA</fullName>
        <active>true</active>
        <label>Servicios TA</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Informar_grado</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Tipo_Estancia__c , &apos;Permanente&apos;)  &amp;&amp;  ISPICKVAL(  Grado_Dependencia__c  , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Grado_Dependencia__c</errorDisplayField>
        <errorMessage>Campo obligatorio para estancia permanente</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_transporte</fullName>
        <active>true</active>
        <errorConditionFormula>( ISPICKVAL( Tipo_Servicio__c, &apos;Centro de Día&apos;)  ||  ISPICKVAL(Tipo_Servicio__c, &apos;Hospital de Día&apos;) )  &amp;&amp;  ISPICKVAL( Transporte__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Transporte__c</errorDisplayField>
        <errorMessage>Campo obligatorio para los servicios Centro y Hospital de día</errorMessage>
    </validationRules>
</CustomObject>